# start_py

./: .gitignore  app.py  lcov.info  makefile  mkdocs.yml  nota.txt  pyproject.toml  pytest.ini
.github/workflows/: pipelinew.yaml
.hooks_pdev/: pre-commit  prepare-commit-msg
docs/: index.md  inicio_rapido.md
docs/api/: app.md  help.md  include.md  src.md
docs/templates/: instalacao.md
docs/work_process/: index.md
docs/work_process/tasks/: validação-do-pré-commit.md
start_py/: include.py
tests/: __init__.py  test_app.py
