[tool.poetry]
name = "start-py"
version = "0.1.0"
description = ""
authors = ["Sérgio Pereira <sergiopereira.br@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.9.4"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-coverage = "^0.0"
pytest-watch = "^4.2.0"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.13.2"
mypy = "^1.14.0"
pip-audit = "^2.7.3"
taskipy = "^1.14.1"


[tool.poetry.group.doc.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = "^0.27.0"
mkdocstrings-python = "^1.13.0"
mkdocs-material = "^9.5.49"
mkdocs-pymdownx-material-extras = "^2.6"
mkdocs-macros-plugin = "^1.3.7"
mkdocs-coverage = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.coverage.run]
disable_warnings = ["no-data-collected"]

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "make update_kanban && mkdocs serve"
cob = "pytest ./tests --cov=./tests"
rel_cob = "pytest --cov=./tests --cov-report=lcov:lcov.info"
moniore = "ptw"
pre_test = "task lint"
test = "pytest -s -x --cov=./tests -vv"
post_test = "coverage html"
git_add = "git add -p"
help = "task -l"
